# rust-bao

./: .gitignore  Cargo.toml  Makefile  README.md  qemu.dtb  rust-bao.asm
.cargo/: config
dts/qemu-aarch64-virt/: linux.dtb  linux.dts  linux1.dtb  linux2.dtb
lloader/: Makefile  loader_aarch64.ld
src/: boot.S  linker.ld  linker_mmu.ld  main.rs
src/arch/: mod.rs
src/arch/aarch64/: bao_defs.rs  boot.S  cpu.rs  defs.rs  exceptions.S  exceptions.rs  interrupts.rs  intr.rs  mod.rs  platform.rs  psci.rs  sysregs.rs  vm.rs  vmm.rs
src/arch/aarch64/armv8_a/: boot.S  cpu_arch_profile.rs  fences.rs  mem.rs  mod.rs  page_table.rs  pagetable.rs  pagetables.S  vm.rs  vmm.rs
src/arch/aarch64/gic/: gic_defs.rs  gicd.rs  gicv3.rs  mod.rs  vgic.rs  vgicv3.rs
src/baocore/: allocator.rs  cache.rs  console.rs  cpu.rs  emul.rs  heap.rs  init.rs  intr.rs  ipc.rs  mem.rs  mod.rs  pagetable.rs  types.rs  vm.rs  vmm.rs
src/baocore/mmu/: mem.rs  mod.rs  sections.rs  vmm.rs
src/config/: mod.rs
src/config/platform/: mod.rs
src/config/platform/qemu_aarch64_virt/: linux.dtb  linux_freertos.rs  mod.rs
src/platform/: mod.rs
src/platform/drivers/: mod.rs  pl011_uart.rs
src/platform/qemu_aarch64_virt/: mod.rs
src/util/: bitmap.rs  mod.rs
