[package]
name = "rust-bao"
version = "0.1.0"
edition = "2021"
authors = ["Linkun Chen <chenlinkun2214@163.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.aarch64-unknown-none]
rustflags = [
    "-Clink-arg=-Tsrc/linker.ld", "-Cforce-frame-pointers=yes"
]

[target.aarch64-unknown-none.dependencies]
aarch64 = "0.0.7"
tock-registers = "0.7"
psci = "0.1.1"
