[package]
name = "rust-bao"
version = "0.1.0"
edition = "2021"
authors = ["Linkun Chen <chenlinkun2214@163.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.8"
spin = "0.7"

[profile.release]
debug = 2

[target.aarch64-unknown-none.dependencies]
aarch64 = "0.0.7"
tock-registers = {version = "0.7", default-features = false, features = ["register_types"]}
psci = { path = "vendor/psci", default-features = false, features = ["smc"] }
